
- Calling the constructor for :class:`rpy2.robjects.vectors.FactorVector`
  with an R factor is no longer making a copy, loosing the associated
  R attributes if any (fixes issue #299).

- `rpy2` could crash when R was unable to dynamically load the C extension for
  one of its packages (noticed with issue #303).
  

Changes
-------

- :func:`rpy2.rinterface.is_initialized` is now a function.


Release 2.6.3
=============

Bug fixed
---------

- Metaclass `RS4Auto_Type` facilitating the creation of Python
  classes from R S4 classes was not handling classes without
  methods (issue #301)


Release 2.6.2
=============

Bugs fixed
----------
 
- Check that R >= 3.2 is used at build time (issue #291)

- Conversion rules were not applied when parsing and evaluating string
  as R code with :class:`rpy2.robjects.R`.


Release 2.6.1
=============

New features
------------

- Because of their long names, the classes
  :class:`SignatureTranslatedAnonymousPackage`,
  :class:`SignatureTranslatedPackage`, and
  :class:`SignatureTranslatedFunction`
  in :mod:`rpy2.robjects.packages` have now the aliases
  :class:`STAP`, :class:`STP`, and :class:`STF` respectively.

Bugs fixed
----------

- Typo in function name emitting warnings at build time (issue #283)
 
- The conversion of `TaggedList` instances is now handling the names
  of items in the list (issue #286)


Changes
-------

- Loading the `ipython` extension in the absence of `pandas` or `numpy`
  is now issuing a warning (issue #279)
  
  
Release 2.6.0
=============

New features
------------

- Report the existence during build time of a file `.Renviron`,
  or the definition of the environment variables `R_ENVIRON' or
  `R_ENVIRON_USER` with a warning. (issue #204)

- Moved console writting callback to use `ptr_R_WriteConsoleEx`
  rather than `ptr_R_WriteConsole`. This allows callbacks
  for warnings and messages. `get/set_writeconsole` is now 
  replaced by `get/set_writeconsole_regular` (regular